# lossDev

./: MD5  NAMESPACE  README  aclocal.m4  configure  configure.ac
R/: AnnualAggLossDevModelInput.R  AnnualAggLossDevModelOutput.R  AnnualAggLossDevModelOutputWithZeros.R  BreakAnnualAggLossDevModelInput.R  BreakAnnualAggLossDevModelOutput.R  DocumentationOfData.R  LossDevModelInput.R  LossDevModelOutput.R  NodeOutput.R  StandardAnnualAggLossDevModelInput.R  StandardAnnualAggLossDevModelOutput.R  lossDev.R  util.R  zzz.R
data/: CPI.txt  CumulativeAutoBodilyInjuryTriangle.txt  IncrementalGeneralLiablityTriangle.txt  MCPI.txt
jags-linux/: README
m4/: Makefile  Makefile.am  Makefile.in  R.m4  acx_blas.m4  acx_fortran.m4  acxx_lapack.m4  libtool.m4
man/: AnnualAggLossDevModelInput-class.Rd  AnnualAggLossDevModelInput-dash-class.Rd  AnnualAggLossDevModelOutput-class.Rd  AnnualAggLossDevModelOutput-dash-class.Rd  AnnualAggLossDevModelOutputWithZeros-class.Rd  AnnualAggLossDevModelOutputWithZeros-dash-class.Rd  BreakAnnualAggLossDevModelInput-class.Rd  BreakAnnualAggLossDevModelInput-dash-class.Rd  BreakAnnualAggLossDevModelOutput-class.Rd  BreakAnnualAggLossDevModelOutput-dash-class.Rd  BreakAnnualAggLossDevModelOutputWithZeros-class.Rd  BreakAnnualAggLossDevModelOutputWithZeros-dash-class.Rd  CPI.Rd  CumulativeAutoBodilyInjuryTriangle.Rd  IncrementalGeneralLiablityTriangle.Rd  LossDevModelInput-class.Rd  LossDevModelInput-dash-class.Rd  LossDevModelOutput-class.Rd  LossDevModelOutput-dash-class.Rd  MCPI.Rd  NodeOutput-class.Rd  NodeOutput-dash-class.Rd  QQPlot,AnnualAggLossDevModelOutput-method.Rd  QQPlot-comma-AnnualAggLossDevModelOutput-dash-method.Rd  QQPlot.Rd  StandardAnnualAggLossDevModelInput-class.Rd  StandardAnnualAggLossDevModelInput-dash-class.Rd  StandardAnnualAggLossDevModelOutput-class.Rd  StandardAnnualAggLossDevModelOutput-dash-class.Rd  StandardAnnualAggLossDevModelOutputWithZeros-class.Rd  StandardAnnualAggLossDevModelOutputWithZeros-dash-class.Rd  accountForZeroPayments.Rd  autoregressiveParameter,AnnualAggLossDevModelOutput-method.Rd  autoregressiveParameter-comma-AnnualAggLossDevModelOutput-dash-method.Rd  autoregressiveParameter.Rd  calculateProbOfPayment.Rd  calendarYearEffect,AnnualAggLossDevModelOutput-method.Rd  calendarYearEffect-comma-AnnualAggLossDevModelOutput-dash-method.Rd  calendarYearEffect.Rd  calendarYearEffectAutoregressiveParameter,AnnualAggLossDevModelOutput-method.Rd  (+171 more)
(+161 files in other folders)
